complete appendix with bunch length evolution during the CC MD

--- a/references.bib
+++ b/references.bib
@@ -1303,6 +1303,19 @@ author = {J. Laskar},
       url           = "https://cds.cern.ch/record/314169",
 }
 
+@article{Alexahin:485304,
+      author        = "Alexahin, Yu I",
+      title         = "{A study of the Coherent Beam-Beam Effect in the Framework
+                       of the Vlasov Perturbation Theory}",
+      journal       = "Nucl. Instrum. Methods Phys. Res., A",
+      reportNumber  = "LHC-Project-Report-461, CERN-LHC-Project-Report-461, 2-3",
+      volume        = "480",
+      pages         = "253-88. 33 p",
+      year          = "2002",
+      url           = "https://cds.cern.ch/record/485304",
+      doi           = "10.1016/S0168-9002(01)01219-0",
+}
+
 @article{QIANG201853,
 title = {Simulation of beam–beam interaction with crab cavities for LHC upgrade},
 journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
@@ -1429,5 +1442,20 @@ author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and 
   note = {Accessed: 05-09-2022},
 }
 
+@article{Buffat:2022dac,
+    author = "Buffat, Xavier",
+    title = "{Suppression of Emittance Growth by a Collective Force: Van Kampen Approach}",
+    doi = "10.18429/JACoW-IPAC2022-WEPOTK059",
+    journal = "JACoW",
+    volume = "IPAC2022",
+    pages = "WEPOTK059",
+    year = "2022"
+}
 
+@misc{van_kamper_presentation_xavier_theory,
+  title = {Crab Cavity experiments and underlying theory.},
+  author = {X. Buffat},
+  url  =  {https://indico.cern.ch/event/1170242/contributions/4915101/attachments/2476586/4250387/2022-07-07_crabMD-expanded.pdf},
+  note = {Accessed: 07-09-2022},
+}
 
