--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -262,7 +262,7 @@ However, instruments used in experiments do not usually display directly the sin
 \end{equation}
 where $f_k$ ranges from 0 over the positive part of the spectrum. It should be emphasised that here $\mathcal{L}$ is two-sided, as defined in~\cite{IEEE:4797525}, though it is considered that the instrument displays only the positive frequencies.
 
-\section{Applying a measured noise spectrum in numerical simulations} 
+\section{Applying a measured noise spectrum in numerical simulations}\label{sec:measured_spectra_to_time_series}
 The goal of this section is to describe how one can convert the measured noise spectrum from a spectrum analyzer to a discrete time series that can be used for numerical simulations. 
 %%%%%%%%%%
 \subsection{Crab cavity noise in numerical simulations}
