add reference to van kampen

--- a/references.bib
+++ b/references.bib
@@ -1459,3 +1459,14 @@ author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and 
   note = {Accessed: 07-09-2022},
 }
 
+@article{VANKAMPEN1955949,
+title = {On the theory of stationary waves in plasmas},
+journal = {Physica},
+volume = {21},
+number = {6},
+pages = {949-963},
+year = {1955},
+issn = {0031-8914},
+doi = {https://doi.org/10.1016/S0031-8914(55)93068-8},
+url = {https://www.sciencedirect.com/science/article/pii/S0031891455930688},
+author = {N.G. {Van Kampen}}}
