--- a/main.tex
+++ b/main.tex
@@ -101,16 +101,8 @@
 \chapter{Experimental studies 2022: investigate the effect of impedance on emittance growth}\label{Ch:experimental_CC_2022}
 \input{chapters/chapter08}
 
-\chapter{Simple model of describing the decoherence suppression from impedance}
+\chapter{Conclusions}
 \input{chapters/chapter09}
-
-
-
-
-
-
-\chapter{Conclusion}\label{Ch:conclusion}
-\input{chapters/conclusion}
 
 % The end matter
 \printglossaries
