--- a/references.bib
+++ b/references.bib
@@ -1470,3 +1470,21 @@ issn = {0031-8914},
 doi = {https://doi.org/10.1016/S0031-8914(55)93068-8},
 url = {https://www.sciencedirect.com/science/article/pii/S0031891455930688},
 author = {N.G. {Van Kampen}}}
+
+@article{Baudrenghien:2665950,
+      author        = "Baudrenghien, Philippe and Mastoridis, Themistoklis and
+                       Miller, Benjamin Nicholas",
+      title         = "{Crab Cavity RF Noise Feedback and Transverse Damper
+                       Interaction}",
+      year          = "2019",
+      url           = "https://cds.cern.ch/record/2665950",
+}
+
+
+@misc{cc_noise_hl_lhc_estimates,
+  title = {Crab Cavity RF Noise: Update 2},
+  author = {P. Baudrenghien},
+  url  =  {https://indico.cern.ch/event/1044711/contributions/4389271/attachments/2264292/3861025/CC_Noise_Feedback_PB.pdf},
+  note = {Accessed: 13-09-2022},
+}
+
