mitigation approach flat optics

--- a/references.bib
+++ b/references.bib
@@ -1471,6 +1471,13 @@ doi = {https://doi.org/10.1016/S0031-8914(55)93068-8},
 url = {https://www.sciencedirect.com/science/article/pii/S0031891455930688},
 author = {N.G. {Van Kampen}}}
 
+@misc{lhc_adt_info_presentation,
+  title = {The LHC transverse damper: a multi-purpose system},
+  author = {D. Valuch},
+  url  =  {https://indico.cern.ch/event/775147/contributions/3366413/attachments/1913791/3164486/MCBI2019_-_LHC_transverse_feedback_a_multi_purpose_system.pdf},
+  note = {Accessed: 13-09-2022},
+}
+
 @article{Baudrenghien:2665950,
       author        = "Baudrenghien, Philippe and Mastoridis, Themistoklis and
                        Miller, Benjamin Nicholas",
