--- a/references.bib
+++ b/references.bib
@@ -1495,3 +1495,10 @@ author = {N.G. {Van Kampen}}}
   note = {Accessed: 13-09-2022},
 }
 
+@misc{elias_run4_op,
+  title = {Run 4 operational scenario and status of optics v1.6},
+  author = {E. Metral},
+  url  =  {https://indico.cern.ch/event/1197424/contributions/5035904/attachments/2507124/4308131/HLLHCCollaborationMeeting_Uppsala_19-09-2022_EM.pdf},
+  note = {Accessed: 13-09-2022},
+}
+
