why suppression is not gonna appear in the HL-LHC

--- a/references.bib
+++ b/references.bib
@@ -1502,3 +1502,24 @@ author = {N.G. {Van Kampen}}}
   note = {Accessed: 13-09-2022},
 }
 
+@thesis{Pieloni:1259906,
+      author        = "Pieloni, Tatiana",
+      title         = "{A study of beam-beam effects in hadron colliders with a
+                       large number of bunches}",
+      year          = "2008",
+      url           = "https://cds.cern.ch/record/1259906",
+      note          = "Presented on 4 Dec 2008",
+}
+
+@article{Buffat:2712068,
+      author        = "Buffat, X and Herr, W and Pieloni, T and Valuch, D",
+      title         = "{Modeling of the emittance growth due to decoherence in
+                       collision at the Large Hadron Collider}",
+      journal       = "Phys. Rev. Accel. Beams",
+      reportNumber  = "2",
+      volume        = "23",
+      pages         = "021002. 9 p",
+      year          = "2020",
+      url           = "https://cds.cern.ch/record/2712068",
+      doi           = "10.1103/PhysRevAccelBeams.23.021002",
+}
