--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -201,6 +201,22 @@ Hence, the normalisation factor in Eq.~\eqref{eq:Sxx_definition_discrete_not_nor
     A=\frac{1}{N^2 \Delta f}.
 \end{equation}
 
+\textbf{Discussion}\\
+At this point it is worth elaborating on the computation of the power spectral density, in the context of the noise effects in a synchrotron that are studied in this thesis.
+
+In Chapter~\ref{Ch:CC_noise_theory} it was discussed that the noise effects are modeled as kicks which update the angle co-ordinates of the particles and which are applied to them once per turn and thus they consist of a discrete-time signal. The power spectral density of that noise signal is given by Eq.~\eqref{eq:autocorrelation_zero_lag_discrete}.  Now, given the fact that in an accelerator the particles receive the noise kicks once per turn, the sampling frequency, $f_s$ equals the revolution frequency of the machine, $\frev$. This means that the frequency resolution, $\Delta f$, can be written as $\Delta f = f_s/N = \frev/N$, where $N$ is the number of samples (or size) in the noise signal. 
+
+Furthermore, the studies consider white noise, which is a random signal with the same amplitude (intensity) at all the frequencies which results in a uniform power spectral density. The white noise can be treated in the discrete-time domain as a sequence of uncorrelated random variables taken from a Gaussian distribution with mean zero and finite standard deviation, $\sigma_\mathrm{white}$.  Since by definition the power spectral density is the same in every frequency, Eq.~\eqref{eq:autocorrelation_zero_lag_discrete} is re-written as:
+\begin{equation}\label{eq:psd_for_white_noise_variance_v0}
+    \sigma_\mathrm{white}^2 =  N S_{yy}(f_k) \frev/N = S_{yy}(f_k) \frev,
+\end{equation}
+which becomes:
+\begin{equation}\label{eq:psd_for_white_noise_variance}
+   S_{yy}(f_k) = \sigma_\mathrm{white}^2 \frev.
+\end{equation}
+
+
+In other words, the power spectral density at a given frequency, $f_k$, for a white noise spectrum modeled as described above, equals the variance of the noise signal over the revolution frequency of the machine
 
 \section{Measuring amplitude and phase noise}\label{app:Measured_noise}
 Amplitude and phase modulation are two of the main types of noise in the output signal of an oscillator. The instantaneous output voltage of an ideal oscillator can be expressed as:
