--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -212,7 +212,7 @@ Furthermore, the studies consider white noise, which is a random signal with the
 \end{equation}
 which becomes:
 \begin{equation}\label{eq:psd_for_white_noise_variance}
-   S_{yy}(f_k) = \sigma_\mathrm{white}^2 \frev.
+   S_{yy}(f_k) = \frac{\sigma_\mathrm{white}^2 } {\frev}.
 \end{equation}
 
 
