--- a/main.tex
+++ b/main.tex
@@ -111,7 +111,7 @@
 \input{appendix/appendix}
 \chapter{Fundamentals of signal analysis and measurement}\label{ch:app_B}
 \input{appendix/appendix_b}
-\chapter{Appendix C}\label{ch:app_B}
+\chapter{Appendix C}\label{ch:app_C}
 \input{appendix/appendix_c}
 \chapter{Glossary and defintions}
 \input{appendix/glossary}
