--- a/symbols.tex
+++ b/symbols.tex
@@ -58,9 +58,10 @@
 \nomenclature[57]{$\beta_{u, \mathrm{CC}}$, $\alpha_{u, \mathrm{CC}}$, $D_{u, \mathrm{CC}}$}{Transverse beta and alpha and dispersion functions at the location of Crab Cavity, with $u=(x,y)$.}
 \nomenclature[58]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
 \nomenclature[59]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
-\nomenclature[60]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
-\nomenclature[61]{$I_n(x)$}{Modified Bessel function of the first kind.}
-\nomenclature[62]{$\Gamma$}{Gamma function.}
-\nomenclature[63]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[64]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
-\nomenclature[65]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune respectively.}
+\nomenclature[60]{$S_\theta$}{Power spectral density of dipole noise in units of [$\mathrm{rad^2/Hz}$].}
+\nomenclature[61]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
+\nomenclature[62]{$I_n(x)$}{Modified Bessel function of the first kind.}
+\nomenclature[63]{$\Gamma$}{Gamma function.}
+\nomenclature[64]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
+\nomenclature[65]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
+\nomenclature[66]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune respectively.}
