--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 \chapter{Theory of Crab Cavity RF noise-induced emittance growth}\label{Ch:CC_noise_theory}
 \input{chapters/chapter03}
 
-\chapter{Calibration of the Crab Cavities for the SPS tests in 2018}\label{Ch:CC_set_up}
+\chapter{Calibration of the Crab Cavities for the SPS tests}\label{Ch:CC_set_up}
 \input{chapters/chapter04}
 
 \chapter{Experimental studies 2018: emittance growth from Crab Cavity noise}\label{Ch:2018_analyisis}
