start corrections chapter 6

--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@
 %\chapter{Emittance growth studies 2018: Operational setup/preparation and beam instrumentation}\label{Ch:2018_setup}
 %\input{chapters/chapter05}
 
-\chapter{Investigation of the discrepancy}\label{Ch:investigating_discrepancy}
+\chapter{Investigation of the discrepancy between emittance growth theory and experimental data}\label{Ch:investigating_discrepancy}
 \input{chapters/chapter06}
 
 \chapter{Simulation studies: Suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:suppression_impedance}
