--- a/references.bib
+++ b/references.bib
@@ -1452,6 +1452,10 @@ author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and 
     year = "2022"
 }
 
+@misc{Themis_philippe_personal_communication,
+  title = {T.~Mastoridis and P.~Baudrenghien, personal communication, November 25, 2020}
+}
+
 @misc{van_kamper_presentation_xavier_theory,
   title = {Crab Cavity experiments and underlying theory.},
   author = {X. Buffat},
