start correcting chapter 8

--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@
 \chapter{Simulation studies: Suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:suppression_impedance}
 \input{chapters/chapter07}
 
-\chapter{Experimental studies 2022: investigate the effect of impedance on emittance growth}\label{Ch:experimental_CC_2022}
+\chapter{Experimental studies 2022: investigation of the effect of impedance on emittance growth}\label{Ch:experimental_CC_2022}
 \input{chapters/chapter08}
 
 \chapter{Conclusions}
