only figures left ch8

--- a/references.bib
+++ b/references.bib
@@ -684,6 +684,19 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
     year = "2021"
 }
 
+@article{Herr:1982428,
+      author        = "Herr, W",
+      title         = "{Introduction to Landau Damping}",
+      reportNumber  = "arXiv:1601.05227",
+      pages         = "27 p",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1982428",
+      note          = "Comments: 27 pages, contribution to the CAS - CERN
+                       Accelerator School: Advanced Accelerator Physics Course,
+                       Trondheim, Norway, 18-29 Aug 2013",
+      doi           = "10.5170/CERN-2014-009.377",
+}
+
 @article{Zanoni:2017,
 	doi = {10.1088/1742-6596/874/1/012092},
 	url = {https://doi.org/10.1088/1742-6596/874/1/012092},
