start changes ch4

--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,8 @@
 \chapter{Theory of Crab Cavity RF noise-induced emittance growth}\label{Ch:CC_noise_theory}
 \input{chapters/chapter03}
 
-\chapter{Calibration of the Crab Cavities for the SPS tests}\label{Ch:CC_set_up}
+%\chapter{Calibration of the Crab Cavities for the SPS tests}\label{Ch:CC_set_up}
+\chapter{Crab Cavities in the SPS: machine set up and Crab Cavity calibration}\label{Ch:CC_set_up}
 \input{chapters/chapter04}
 
 \chapter{Experimental studies 2018: emittance growth from Crab Cavity noise}\label{Ch:2018_analyisis}
