--- a/references.bib
+++ b/references.bib
@@ -815,7 +815,6 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
 
 
 
-
 @misc{HT_calibration_2018,
   title = {Beam instrumentation with SPS Crabs},
   author = {Tom Levens},
@@ -1509,6 +1508,13 @@ author = {N.G. {Van Kampen}}}
   author = {P. Baudrenghien},
   url  =  {https://indico.cern.ch/event/1044711/contributions/4389271/attachments/2264292/3861025/CC_Noise_Feedback_PB.pdf},
   note = {Accessed: 13-09-2022},
+}
+
+@misc{sps_headtail_monitor,
+  title = {SPS Head-Tail Monitor},
+  author = {Kevin Shing Bruce Li},
+  url  =  {https://indico.cern.ch/event/931117/contributions/3913554/attachments/2096199/3523367/014_HeadtailMonitor.pdff},
+  note = {Accessed: 27-09-2022},
 }
 
 @misc{elias_run4_op,
