finalise measuremtn of cc voltage in 2018

--- a/references.bib
+++ b/references.bib
@@ -243,6 +243,15 @@ of HL-LHC Double Quarter Wave Crab Cavities},
   note = {Accessed: 10-11-2021},
 }
 
+@misc{wp4_triantafyllou_2020,
+  title = {Investigating the discrepancy between measured and
+expected emittance growth in SPS Crab Cavity tests},
+  author = {N. Triantafyllou et al},
+  url  =  {https://indico.cern.ch/event/965718/contributions/4064170/attachments/2135267/3596606/WP4_3November_CCnoiseStudies.pdf},
+  note = {Accessed: 27-09-2022},
+}
+
+
 @article{Beth:889480,
       author        = "Beth, R A",
       title         = "{Complex Methods for Three-Dimensional Magnetic Fields}",
