--- a/main.tex
+++ b/main.tex
@@ -84,8 +84,8 @@
 \input{chapters/chapter03}
 
 %\chapter{Calibration of the Crab Cavities for the SPS tests}\label{Ch:CC_set_up}
-\chapter{Crab Cavities in the SPS: machine set up and Crab Cavity calibration}\label{Ch:CC_set_up}
-\input{chapters/chapter04}
+%\chapter{Crab Cavities in the SPS: machine set up and Crab Cavity calibration}\label{Ch:CC_set_up}
+%\input{chapters/chapter04}
 
 \chapter{Experimental studies 2018: emittance growth from Crab Cavity noise}\label{Ch:2018_analyisis}
 \input{chapters/chapter05}
