finalise dispestice contribution form the ws

--- a/references.bib
+++ b/references.bib
@@ -1477,6 +1477,10 @@ author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and 
   title = {T.~Mastoridis and P.~Baudrenghien, personal communication, November 25, 2020}
 }
 
+@misc{Hannes_personal_communication,
+  title = {H.~Bartosik personal communication, March, 2022}
+}
+
 @misc{van_kamper_presentation_xavier_theory,
   title = {Crab Cavity experiments and underlying theory.},
   author = {X. Buffat},
