update symboles beta and gamma relativistiv

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,8 @@
 \newcommand{\CCfrequency}{{f_\mathrm{CC}}}
 \newcommand{\Qx}{{Q_{x0}}}
 \newcommand{\Qy}{{Q_{y0}}}
+\newcommand{\gammarel}{{\gamma_0}}
+\newcommand{\betarel}{{\beta_0}}
 % Commands to avoid breaking words across lines in Latex
 \tolerance=1
 \emergencystretch=\maxdimen
