finish draft 2, chapter 4

--- a/main.tex
+++ b/main.tex
@@ -115,8 +115,8 @@
 \chapter{Fundamentals of signal analysis and measurement}\label{ch:app_B}
 \input{appendix/appendix_b}
 \chapter{Appendix C}\label{ch:app_C}
-\input{appendix/appendix_c}\label{ch:app_HT_monitor}
-\chapter{SPS Headt-Tail monitor as the main diagonostic for the Crab Cavity studies}
+\input{appendix/appendix_c}
+\chapter{SPS Headt-Tail monitor as the main diagonostic for the Crab Cavity studies}\label{ch:app_HT_monitor}
 \input{appendix/appendix_HT_monitor}
 
 \chapter{Glossary and defintions}
