--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@
 \chapter{Investigation of the discrepancy between emittance growth theory and experimental data}\label{Ch:investigating_discrepancy}
 \input{chapters/chapter06}
 
-\chapter{Simulation studies: Suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:suppression_impedance}
+\chapter{Simulation studies: Emittance growth suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:suppression_impedance}
 \input{chapters/chapter07}
 
 \chapter{Experimental studies 2022: investigation of the effect of impedance on emittance growth}\label{Ch:experimental_CC_2022}
