--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,13 @@
 \newcommand{\Qy}{{Q_{y0}}}
 \newcommand{\gammarel}{{\gamma_0}}
 \newcommand{\betarel}{{\beta_0}}
+\newcommand{\symE}{{E_b}}
+
+
+
+
+
+
 % Commands to avoid breaking words across lines in Latex
 \tolerance=1
 \emergencystretch=\maxdimen
