--- a/appendix/appendix_HT_monitor.tex
+++ b/appendix/appendix_HT_monitor.tex
@@ -84,7 +84,7 @@ The last step to make the Head-Tail acquisitions meaningful is to convert the me
 
 where $\beta_y$ is the beta function, $\Qy$ is the tune, and $\mid \psi_{y, HT} - \psi_{y, CC} \mid$ is the vertical phase advance (in radians) between the $\CC$ and the Head-Tail monitor. The same applies for the horizontal plane. The subscripts Head-Tail and CC indicate quanities at the location of the Head-Tail monitor and CC respectively.
 
-The $\CC$ voltage is then reconstructed from the $\CC$ kick which is written as $\theta = - \frac{q V_\mathrm{CC}(t)}{\symE}$, where $q$ is the charge of the particle, $\symE$ the beam energy and $V_\mathrm{CC}(t) = V_\mathrm{CC} \sin(2 \pi \CCfrequency t + \phi_\mathrm{CC}) $ is the voltage that a particle experiences while passing through the $\CC$. In the context where the HT monitor measures the signal as a function of time, $t$, the voltage in the above formula is expressed accordingly as $V_\mathrm{CC}(t)$, where $t=0$ the center of the bunch.
+The $\CC$ voltage is then reconstructed from the $\CC$ kick which is written as $\theta = - \frac{q V_\mathrm{CC}(t)}{\symE}$, where $q$ is the charge of the particle, $\symE$ the beam energy and $V_\mathrm{CC}(t) = V_\mathrm{CC} \sin(2 \pi \CCfrequency t + \phi_\mathrm{CC}) $ is the voltage that a particle experiences while passing through the $\CC$. In the context where the HT monitor measures the signal as a function of time, $t$, the voltage in the above formula is expressed accordingly as $V_\mathrm{CC}(t)$, where $t=0$ the center of the bunch as it passes through the Head-Tail monitor.
 
 % 1. locally PhD_projects/CC_MD_2021_summary/HT_monitor/2018_HT_monitor/MD2_phase_scan
 % /eos/user/n/natriant/2018/CC_MD_2018_summary/2018_HT_monitor/MD2_phase_scan_CC1/main_example_135105/plot_1example_HT_acquisition_for_thesis_30May2018-135105_for_thesis_sin_fit_forCh4_fixed_fcc-CC_post_processing_Ch4_3_2_and_after.ipynb
