--- a/main.tex
+++ b/main.tex
@@ -19,12 +19,22 @@
 \newcommand{\Qy}{{Q_{y0}}}
 \newcommand{\gammarel}{{\gamma_0}}
 \newcommand{\betarel}{{\beta_0}}
+\newcommand{\CC}{{CC}}
+% The following lines are basically a ducktape to remove the initial approach.
 \newcommand{\symE}{{E_b}}
-
-
-
-
-
+\newcommand{\Jx}{{J_x}}
+\newcommand{\Jy}{{J_y}}
+\newcommand{\symm}{{m}}
+\newcommand{\symc}{{c}}
+\newcommand{\VRF}{{V_\mathrm{RF}}}
+\newcommand{\fRF}{{f_\mathrm{RF}}}
+\newcommand{\VCC}{{V_\mathrm{CC}}}
+\newcommand{\fCC}{{f_\mathrm{CC}}}
+\newcommand{\phiCC}{{\phi_\mathrm{CC}}}
+\newcommand{\betaCC}{{\beta_\mathrm{CC}}}
+\newcommand{\Qs}{{Q_s}}
+\newcommand{\psix}{{\psi_x}}
+\newcommand{\psiy}{{\psi_y}}
 
 % Commands to avoid breaking words across lines in Latex
 \tolerance=1
