--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,9 @@
 \newcommand{\Qs}{{Q_s}}
 \newcommand{\psix}{{\psi_x}}
 \newcommand{\psiy}{{\psi_y}}
+\newcommand{\Dx}{{D_x}}
+\newcommand{\Dy}{{D_y}}
+\newcommand{\Nb}{{N_b}}
 
 % Commands to avoid breaking words across lines in Latex
 \tolerance=1
