--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,18 @@
 \newcommand{\Dx}{{D_x}}
 \newcommand{\Dy}{{D_y}}
 \newcommand{\Nb}{{N_b}}
+\newcommand{\Qpx}{{Q^\prime_{x}}}
+\newcommand{\Qpy}{{Q^\prime_{y}}}
+\newcommand{\sigmat}{{\sigma_t}}
+\newcommand{\emitx}{{\epsilon^n_{x}}}
+\newcommand{\emity}{{\epsilon^n_{y}}}
+\newcommand{\emitxgeom}{{\epsilon_x^{geom}}}
+\newcommand{\emitygeom}{{\epsilon_y^{geom}}}
+\newcommand{\Dqxrms}{{\Delta\: \!Q^{rms}_{x}}}
+\newcommand{\Dqyrms}{{\Delta\: \!Q^{rms}_{y}}}
+\newcommand{\axx}{{\alpha_{xx}}}
+\newcommand{\ayy}{{\alpha_{yy}}}
+\newcommand{\axy}{{\alpha_{yx}}}
 
 % Commands to avoid breaking words across lines in Latex
 \tolerance=1
