finalise transferring symbols

--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,7 @@
 \newcommand{\axx}{{\alpha_{xx}}}
 \newcommand{\ayy}{{\alpha_{yy}}}
 \newcommand{\axy}{{\alpha_{yx}}}
+\newcommand{\chromaxi}{{\xi^{n}_x}}
 
 % Commands to avoid breaking words across lines in Latex
 \tolerance=1
