print list of symboles

--- a/main.tex
+++ b/main.tex
@@ -93,10 +93,10 @@
 \addcontentsline{toc}{chapter}{List of tables}
 
 
-\thispagestyle{plain} % removing headings from this specific page
-\input{head/symbols.sub}
-\listofsymbols
-\addcontentsline{toc}{chapter}{List of symbols}
+%\thispagestyle{plain} % removing headings from this specific page
+%\input{head/symbols.sub}
+%\listofsymbols
+%\addcontentsline{toc}{chapter}{List of symbols}
 
 \newpage
 
