--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \newcommand{\Qy}{{Q_{y0}}}
 \newcommand{\gammarel}{{\gamma_0}}
 \newcommand{\betarel}{{\beta_0}}
-\newcommand{\CC}{{CC}}
+\newcommand{\CC}{{\mathrm{CC}}}
 % The following lines are basically a ducktape to remove the initial approach.
 \newcommand{\symE}{{E_b}}
 \newcommand{\Jx}{{J_x}}
