add extra appendix for 2022 measurements

--- a/main.tex
+++ b/main.tex
@@ -151,6 +151,8 @@
 \input{appendix/appendix_c}
 \chapter{SPS Headt-Tail monitor as the main diagonostic for the Crab Cavity studies}\label{ch:app_HT_monitor}
 \input{appendix/appendix_HT_monitor}
+\chapter{Measurements from experimental studies in 2022}\label{ch:app_measurments_22}
+\input{appendix/appendix_e}
 
 \chapter{Glossary and defintions}
 \input{appendix/glossary}
