--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -61,3 +61,181 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
     \caption{Transverse beam profiles as obtained from SPS.BWS.51637.H during the CC experiment in the SPS in 2022. The data points from the IN (OUT) scan are shown with blue (orange) color.}
     \label{fig:WS_IN_vs_OUT_2022}
  \end{figure}
+
+
+ \section{Transverse emittance growth measurements}\label{sec:emittance_growth_2022}
+
+
+
+
+
+
+ \section{Bunch length measurements}\label{sec:bunch_length_meas_2022}
+
+
+
+ The bunch length measurements presented in this section were performed with the Wall Current monitor. The Wall Current monitor acquires the longitudinal bunch profiles and uses a Gaussian fit for the evaluation of the bunch length. Each point shown in the folllowing plots corresponds to the average bunch length value obtained from 100 consecutive acquisitions are  
+
+
+
+ %https://accelconf.web.cern.ch/e08/papers/thpc144.pdf (from email communication with IVAN)
+ 
+ AND USES A GAUSSIAN FIT FOR THE EVALUATION O
+ 
+ once per turn
+
+
+
+ \subsection{Experiment I: dependece of emittance growth on CC RF noise power}\label{subsec:2022_exp1_bunch_length}
+ Figure~\ref{fig:cc_md_2022_overview_plots_noise_scan_bunch_length} illustrates the evolution of the rms bunch length measured in the SPS on May 16, 2022, for the four different levels of phase noise injected in the CC RF system increasing from the top left to bottom right. The Wall Current monitor acquires the longitudinal bunch profiles, from which the bunch length is computed, once per turn. In the figures below, each point corresponds to the average bunch lengths from the profiles over 100 turns while the error bars indicate the standard deviation between them. \textcolor{red}{Is it correct that is acquires profiles once per turn?}
+ % Scripting plot: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
+ \begin{figure}[htp]
+     \centering
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_COAST_02.png}  
+         \caption{-115.2\,dBc/Hz}
+         %\label{fig:cc_md_2022_coast2}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_COAST_03.png}  
+         \caption{-109.5\,dBc/Hz}
+         %\label{fig:cc_md_2022_coast3}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_COAST_04.png}  
+         \caption{-104.7\,dBc/Hz}
+         %\label{fig:cc_md_2022_coast4}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+             \centering
+             \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_COAST_05.png}  
+             \caption{-100.1\,dBc/Hz}
+             %\label{fig:cc_md_2022_coast5}
+     \end{subfigure}
+     \caption{Evolution of the bunch length during the CC Experiment I on May 16, 2022. The different phase noise levels injected in the RF system of CC1, are displayed at the captions of each plot.}
+     \label{fig:cc_md_2022_overview_plots_noise_scan_bunch_length}
+  \end{figure}
+  
+
+
+ \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}
+
+ % Scripting plot: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
+  \begin{figure}[htp]
+     \centering
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_COAST_06.png}  
+         \caption{$k_\mathrm{LOD}=+15 \mathrm{/m^{4}}$}
+         %\label{fig:cc_md_2022_coast6}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_COAST_07.png}  
+         \caption{$k_\mathrm{LOD}=+10  \mathrm{/m^{4}}$}
+         %\label{fig:cc_md_2022_coast7}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_COAST_08.png}  
+         \caption{$k_\mathrm{LOD}=+5  \mathrm{/m^{4}}$}
+         %\label{fig:cc_md_2022_coast8}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+             \centering
+             \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_COAST_09.png}  
+             \caption{$k_\mathrm{LOD}=-5 \mathrm{/m^{4}}$}
+             %\label{fig:cc_md_2022_coast9}
+     \end{subfigure}
+     \caption{Evolution of the bunch length during the  CC Experiment II on May 16, 2022. The different octupole settings are displayed at the captions of each plot.}
+     \label{fig:cc_md_2022_overview_plots_klod_scan_bunch_length}
+  \end{figure}
+ 
+ 
+ The average measured bunch length over all above coasts on May 16, 2022 (Experiments I and II) was found to be, 4$\sigma_t$=1.83\,ns. 
+ 
+ 
+ 
+
+
+
+ \section{Intensity measurements}\label{sec:intensity_meas_2022}
+
+ The intensity measurements presented in the section were acquired using the 
+
+
+
+ w. The longitudinal bunch profiles were acquired every turn using a wall
+ The bunch length measurements presented in this section were performed with the Wall Current monitor. The Wall Current monitor acquires the longitudinal bunch profiles and uses a Gaussian fit for the evaluation of the bunch length. Each point shown in the folllowing plots corresponds to the average bunch length value obtained from 100 consecutive acquisitions are  
+
+
+ \subsection{Experiment I: dependece of emittance growth on CC RF noise power}\label{subsec:2022_exp1_intensity}
+
+ \begin{figure}[htp]
+    \centering
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_16May22_coast_2.png}  
+        \caption{-115.2\,dBc/Hz}
+        %\label{fig:cc_md_2022_coast2}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_16May22_coast_3.png}  
+        \caption{-109.5\,dBc/Hz}
+        %\label{fig:cc_md_2022_coast3}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_16May22_coast_4.png}  
+        \caption{-104.7\,dBc/Hz}
+        %\label{fig:cc_md_2022_coast4}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_16May22_coast_5.png}  
+            \caption{-100.1\,dBc/Hz}
+            %\label{fig:cc_md_2022_coast5}
+    \end{subfigure}
+    \caption{Evolution of the intensity during the CC Experiment I on May 16, 2022. The different phase noise levels injected in the RF system of CC1, are displayed at the captions of each plot.}
+    \label{fig:cc_md_16_may_2022_intensity_overview_exper1}
+ \end{figure}
+ 
+
+ \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}
+
+ % Scripting plot: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
+  \begin{figure}[htp]
+     \centering
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_16May22_coast_6.png}  
+         \caption{$k_\mathrm{LOD}=+15 \mathrm{/m^{4}}$}
+         %\label{fig:cc_md_2022_coast6}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_16May22_coast_7.png}  
+         \caption{$k_\mathrm{LOD}=+10  \mathrm{/m^{4}}$}
+         %\label{fig:cc_md_2022_coast7}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+         \centering
+         \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_16May22_coast_8.png}  
+         \caption{$k_\mathrm{LOD}=+5  \mathrm{/m^{4}}$}
+         %\label{fig:cc_md_2022_coast8}
+     \end{subfigure}
+     \begin{subfigure}{.45\textwidth}
+             \centering
+             \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_16May22_coast_9.png}  
+             \caption{$k_\mathrm{LOD}=-5 \mathrm{/m^{4}}$}
+             %\label{fig:cc_md_2022_coast9}
+     \end{subfigure}
+     \caption{Evolution of the intensity during the  CC Experiment II on May 16, 2022. The different octupole settings are displayed at the captions of each plot.}
+     \label{fig:cc_md_2022_overview_plots_klod_scan_intensity_exper2}
+  \end{figure}
+
+ wirte the averafe
