--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -160,6 +160,49 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
  
  
 
+ \subsection{Experiment III: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:2022_exp3_bunch_length}
+
+ % Plotting script: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_12Sep2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
+ % Figures location: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_12Sep2022/longitudinal_profiles/figures_for_thesis
+ \begin{figure}[htp]
+    \centering
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_cc_md_sep_coast6.png}  
+        \caption{$k_\mathrm{LOD}=-30 \mathrm{/m^{4}}$}
+        %\label{fig:cc_md_2022_coast6}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_cc_md_sep_coast7.png}  
+        \caption{$k_\mathrm{LOD}=-20 \mathrm{/m^{4}}$}
+        %\label{fig:cc_md_2022_coast7}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_cc_md_sep_coast8.png}  
+        \caption{$k_\mathrm{LOD}=-10 \mathrm{/m^{4}}$}
+        %\label{fig:cc_md_2022_coast8}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_cc_md_sep_coast9.png}  
+            \caption{$k_\mathrm{LOD}=+30 \mathrm{/m^{4}}$}
+            %\label{fig:cc_md_2022_coast9}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_c/bunch_length_cc_md_sep_coast11.png}  
+        \caption{$k_\mathrm{LOD}=+10  \mathrm{/m^{4}}$}
+        %\label{fig:cc_md_2022_coast9}
+\end{subfigure}
+    \caption{Evolution of the bunch length during the CC Experiment III on September 12, 2022. The different octupole settings are displayed at the captions of each plot.}
+    \label{fig:cc_md_sep_2022_overview_plots_klod_scan_bunch_length}
+ \end{figure}
+
+
+The average measured bunch length over all above coasts in 2022, was found to be, 4$\sigma_t$=1.77\,ns. 
+
 
 
  \section{Intensity measurements}\label{sec:intensity_meas_2022}
@@ -174,6 +217,7 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
 
  \subsection{Experiment I: dependece of emittance growth on CC RF noise power}\label{subsec:2022_exp1_intensity}
 
+ % Plotting script: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/BCTDC_intensity/plot_intensity_evolution.ipynb
  \begin{figure}[htp]
     \centering
     \begin{subfigure}{.45\textwidth}
@@ -205,10 +249,11 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
  \end{figure}
  
 
- \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}
+ \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:2022_exp2_intensity}
 
- % Scripting plot: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/longitudinal_profiles/plot_bunch_length_for_thesis.ipynb
-  \begin{figure}[htp]
+
+ % Plotting script: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/BCTDC_intensity/plot_intensity_evolution.ipynb
+\begin{figure}[htp]
      \centering
      \begin{subfigure}{.45\textwidth}
          \centering
@@ -236,6 +281,48 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
      \end{subfigure}
      \caption{Evolution of the intensity during the  CC Experiment II on May 16, 2022. The different octupole settings are displayed at the captions of each plot.}
      \label{fig:cc_md_2022_overview_plots_klod_scan_intensity_exper2}
-  \end{figure}
+\end{figure}
 
- wirte the averafe
+
+ The average measured intensity over all above coasts on May 16, 2022 (Experiment III) was found to be 2.9$\times 10^{10}$\,protons per bunch. 
+ 
+
+ \subsection{Experiment III: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:2022_exp3_intensity}
+
+ \begin{figure}[htp]
+    \centering
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_12Sep22_coast_6.png}  
+        \caption{$k_\mathrm{LOD}=-30 \mathrm{/m^{4}}$}
+        %\label{fig:cc_md_2022_coast6}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_12Sep22_coast_7.png}  
+        \caption{$k_\mathrm{LOD}=-20 \mathrm{/m^{4}}$}
+        %\label{fig:cc_md_2022_coast7}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_12Sep22_coast_8.png}  
+        \caption{$k_\mathrm{LOD}=-10 \mathrm{/m^{4}}$}
+        %\label{fig:cc_md_2022_coast8}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_12Sep22_coast_9.png}  
+            \caption{$k_\mathrm{LOD}=+30 \mathrm{/m^{4}}$}
+            %\label{fig:cc_md_2022_coast9}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/app_e/intensity_cc_md_12Sep22_coast_11.png}  
+        \caption{$k_\mathrm{LOD}=+10  \mathrm{/m^{4}}$}
+        %\label{fig:cc_md_2022_coast9}
+\end{subfigure}
+    \caption{Evolution of the bunch length during the CC Experiment III on September 12, 2022. The different octupole settings are displayed at the captions of each plot.}
+    \label{fig:cc_md_sep_2022_overview_plots_klod_scan_intensity}
+ \end{figure}
+
+ The average measured intensity over all above coasts on September 12, 2022 (Experiments III) was found to be 2.5$\times 10^{10}$\,protons per bunch. 
