move emit growth exp2 appendix

--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -68,7 +68,41 @@ It can be seen that the emittance values obtained from the OUT scan appear to be
 
 
 
+ \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:emittance_growth_2022_exper2}
 
+
+% location: /eos/user/n/natriant/2022/SPS_MDs_2022/cc_md_16May2022/roundA_online_analysis_ws/for_thesis
+% script to plot: /afs/cern.ch/work/n/natriant/public/SPS_MDs_2022/cc_md_16May2022/ws_measurements 
+\begin{figure}[htp]
+    \centering
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/Ch8/emit_vs_time_Set1_coast6.png}  
+        \caption{$k_\mathrm{LOD}=+15 \ \mathrm{/m^{4}}$}
+        \label{fig:cc_md_2022_coast6}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/Ch8/emit_vs_time_Set1_coast7.png}  
+        \caption{$k_\mathrm{LOD}=+10 \ \mathrm{/m^{4}}$}
+        \label{fig:cc_md_2022_coast7}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+        \centering
+        \includegraphics[width=.95\linewidth]{images/Ch8/emit_vs_time_Set1_coast8.png}  
+        \caption{$k_\mathrm{LOD}=+5 \ \mathrm{/m^{4}}$}
+        \label{fig:cc_md_2022_coast8}
+    \end{subfigure}
+    \begin{subfigure}{.45\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{images/Ch8/emit_vs_time_Set1_coast9.png}  
+            \caption{$k_\mathrm{LOD}=-5 \ \mathrm{/m^{4}}$}
+            \label{fig:cc_md_2022_coast9}
+    \end{subfigure}
+    \caption{Horizontal (blue) and vertical (red) emittance evolution of a single bunch during the CC experiment on 16 May, 2022 driven by phase noise of -104.7\,dBc/Hz. The different octupole settings are displayed in the captions of each plot.}
+    \label{fig:cc_md_2022_overview_plots_klod_scan}
+ \end{figure}
+ 
 
  \section{Bunch length measurements}\label{sec:bunch_length_meas_2022}
 
